# goit-web-hw-07

./: config.ini  my_select.py  pyproject.toml  requirements.txt  seed.py
conf/: models.py
migrations/versions/: 9dacbd4e2d15_init.py
